fix(featured-section-7072): set z-index of image focus-within to 0

--- a/packages/styles/scss/components/feature-section/_feature-section.scss
+++ b/packages/styles/scss/components/feature-section/_feature-section.scss
@@ -16,8 +16,14 @@
     position: relative;
     padding-left: $carbon--spacing-05;
     padding-right: $carbon--spacing-05;
+
     &:focus-within {
       outline: none;
+
+      ::slotted(#{$dds-prefix}-image),
+      .#{$prefix}--image {
+        z-index: 0;
+      }
     }
   }
 
